// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fork 1`] = `
Object {
  "d": Object {
    "key": 1,
    "type": "ITEM",
    "value": Object {
      "d": Object {
        "type": "BAR",
      },
    },
  },
}
`;

exports[`fork 2`] = `
Object {
  "d": Object {
    "key": 2,
    "type": "ITEM",
    "value": Object {
      "d": Object {
        "type": "BAR",
      },
    },
  },
}
`;

exports[`fork 3`] = `
Object {
  "d": Object {
    "key": 2,
    "type": "ITEM",
    "value": Object {
      "d": Object {
        "type": "BAR2",
      },
    },
  },
}
`;

exports[`fork 4`] = `
Object {
  "d": Object {
    "key": 1,
    "type": "ITEM",
    "value": Object {
      "d": Object {
        "type": "DELETE",
      },
    },
  },
}
`;

exports[`fork 5`] = `
Object {
  "d": Object {
    "key": 2,
    "type": "ITEM",
    "value": Object {
      "d": Object {
        "type": "BAR",
      },
    },
  },
}
`;

exports[`fork 6`] = `
Object {
  "d": Object {
    "key": 2,
    "type": "ITEM",
    "value": Object {
      "d": Object {
        "type": "BAR2",
      },
    },
  },
}
`;

exports[`fork 7`] = `
Object {
  "d": Object {
    "key": 2,
    "type": "ITEM",
    "value": Object {
      "d": Object {
        "type": "DELETE",
      },
    },
  },
}
`;
